ROC-7798: Handle existing Paper response uploads