@@ -1,12 +1,18 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.caseworker;
 
 import com.google.common.collect.ImmutableList;
+import net.bytebuddy.utility.RandomString;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.extension.ExtensionContext;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.ArgumentsProvider;
+import org.junit.jupiter.params.provider.ArgumentsSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.testcontainers.shaded.com.google.common.collect.ImmutableMap;
@@ -21,13 +27,32 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.cmc.ccd.domain.CCDClaimDocumentType.CORRESPONDENCE;
+import static uk.gov.hmcts.cmc.ccd.domain.CCDClaimDocumentType.MEDIATION_AGREEMENT;
+import static uk.gov.hmcts.cmc.ccd.domain.CCDClaimDocumentType.OTHER;
 
 @ExtendWith(MockitoExtension.class)
 class ManageDocumentsCallbackHandlerTest {
+    private static final String PAPER_RESPONSE_PREFIX = "PAPER_RESPONSE";
+
+    private static final Set<CCDClaimDocumentType> NON_PAPER_RESPONSE_TYPES
+        = Set.of(CORRESPONDENCE, MEDIATION_AGREEMENT, OTHER);
+
+    private static final Set<CCDClaimDocumentType> PAPER_RESPONSE_TYPES
+        = Arrays.stream(CCDClaimDocumentType.values())
+        .filter(t -> t.name().startsWith(PAPER_RESPONSE_PREFIX))
+        .collect(Collectors.toSet());
 
     private ManageDocumentsCallbackHandler handler;
 
@@ -66,7 +91,7 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
             Assertions.assertNull(response.getErrors());
         }
@@ -86,7 +111,7 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
             Assertions.assertNotNull(response.getErrors());
             assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.NO_CHANGES_ERROR_MESSAGE));
@@ -108,16 +133,12 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
         }
 
-        @Test
-        void shouldNotReturnErrorsIfNoPaperResponseSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.MEDIATION_AGREEMENT)
-                    .build();
-
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+        @ParameterizedTest(name
+            = "#{index} - shouldNotReturnErrorsIfNoPaperResponseSelected={arguments}")
+        @ArgumentsSource(NonPaperResponseType.class)
+        void shouldNotReturnErrorsIfNoPaperResponseSelected(CCDClaimDocumentType paperResponseType) {
+            CCDCollectionElement<CCDClaimDocument> element =
+                buildCCDCollection(paperResponseType, null);
 
             CCDCase ccdCase = CCDCase.builder()
                 .staffUploadedDocuments(ImmutableList.of(element))
@@ -136,27 +157,24 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
             Assertions.assertNull(response.getErrors());
         }
 
-        @Test
-        void shouldReturnErrorIfPaperResponseDisputesAllSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.PAPER_RESPONSE_DISPUTES_ALL)
-                    .build();
-
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+        @ParameterizedTest(name
+            = "#{index} - shouldReturnErrorIfPaperResponseSelected={arguments}")
+        @ArgumentsSource(PaperResponseTypeProvider.class)
+        void shouldReturnErrorIfPaperResponseSelected(CCDClaimDocumentType paperResponseType) {
+            CCDCollectionElement<CCDClaimDocument> element =
+                buildCCDCollection(paperResponseType, null);
 
             CCDCase ccdCase = CCDCase.builder()
                 .staffUploadedDocuments(ImmutableList.of(element))
                 .build();
 
-            when(caseDetailsConverter.extractCCDCase(any())).thenReturn(ccdCase);
+            when(caseDetailsConverter.extractCCDCase(caseDetails)).thenReturn(ccdCase);
+            when(caseDetailsConverter.extractCCDCase(caseDetailsBefore)).thenReturn(CCDCase.builder().build());
 
             CallbackRequest request = CallbackRequest.builder()
                 .caseDetails(caseDetails)
@@ -169,28 +187,35 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
             Assertions.assertNotNull(response.getErrors());
             assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.PAPER_RESPONSE_ERROR_MESSAGE));
         }
 
-        @Test
-        void shouldReturnErrorIfPaperResponseFullAdmitSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.PAPER_RESPONSE_FULL_ADMIT)
-                    .build();
+        @ParameterizedTest
+        @ArgumentsSource(PaperResponseTypeProvider.class)
+        void shouldNotReturnErrorIfExistingPaperResponse(CCDClaimDocumentType paperResponseType) {
+            List<CCDClaimDocumentType> uploadedDocumentTypes = new ArrayList(NON_PAPER_RESPONSE_TYPES);
 
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+            uploadedDocumentTypes.add(paperResponseType);
+
+            String paperResponseId = RandomString.make();
+
+            var staffUploadedDocuments = uploadedDocumentTypes.stream()
+                .map(t -> buildCCDCollection(t, t == paperResponseType ? paperResponseId : null))
+                .collect(Collectors.toList());
 
             CCDCase ccdCase = CCDCase.builder()
-                .staffUploadedDocuments(ImmutableList.of(element))
+                .staffUploadedDocuments(staffUploadedDocuments)
                 .build();
 
-            when(caseDetailsConverter.extractCCDCase(any())).thenReturn(ccdCase);
+            CCDCase ccdCaseBefore = CCDCase.builder()
+                .staffUploadedDocuments(List.of(buildCCDCollection(paperResponseType, paperResponseId)))
+                .build();
+
+            when(caseDetailsConverter.extractCCDCase(caseDetails)).thenReturn(ccdCase);
+            when(caseDetailsConverter.extractCCDCase(caseDetailsBefore)).thenReturn(ccdCaseBefore);
 
             CallbackRequest request = CallbackRequest.builder()
                 .caseDetails(caseDetails)
@@ -203,28 +228,29 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
-            Assertions.assertNotNull(response.getErrors());
-            assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.PAPER_RESPONSE_ERROR_MESSAGE));
+            Assertions.assertNull(response.getErrors());
         }
 
-        @Test
-        void shouldReturnErrorIfPaperResponseMoreTimeSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.PAPER_RESPONSE_MORE_TIME)
-                    .build();
-
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+        @ParameterizedTest(name
+            = "#{index} - shouldReturnErrorIfModifyingTypeOfExistingPaperResponseToDifferentPaperResponse={arguments}")
+        @ArgumentsSource(PaperResponseToPaperResponseType.class)
+        void shouldReturnErrorIfModifyingTypeOfExistingPaperResponseToDifferentPaperResponse(
+            CCDClaimDocumentType paperResponseType,
+            CCDClaimDocumentType changedType) {
+            String paperResponseId = RandomString.make();
 
             CCDCase ccdCase = CCDCase.builder()
-                .staffUploadedDocuments(ImmutableList.of(element))
+                .staffUploadedDocuments(List.of(buildCCDCollection(changedType, paperResponseId)))
                 .build();
 
-            when(caseDetailsConverter.extractCCDCase(any())).thenReturn(ccdCase);
+            CCDCase ccdCaseBefore = CCDCase.builder()
+                .staffUploadedDocuments(List.of(buildCCDCollection(paperResponseType, paperResponseId)))
+                .build();
+
+            when(caseDetailsConverter.extractCCDCase(caseDetails)).thenReturn(ccdCase);
+            when(caseDetailsConverter.extractCCDCase(caseDetailsBefore)).thenReturn(ccdCaseBefore);
 
             CallbackRequest request = CallbackRequest.builder()
                 .caseDetails(caseDetails)
@@ -237,28 +263,30 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
             Assertions.assertNotNull(response.getErrors());
             assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.PAPER_RESPONSE_ERROR_MESSAGE));
         }
 
-        @Test
-        void shouldReturnErrorIfPaperResponsePartAdmitSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.PAPER_RESPONSE_PART_ADMIT)
-                    .build();
-
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+        @ParameterizedTest(name
+            = "#{index} - shouldReturnErrorIfModifyingTypeOfExistingPaperResponseToDifferentPaperResponse={arguments}")
+        @ArgumentsSource(PaperResponseToNonPaperResponseType.class)
+        void shouldNotReturnErrorIfModifyingTypeOfExistingPaperResponseToNonPaperResponse(
+            CCDClaimDocumentType paperResponseType,
+            CCDClaimDocumentType changedType) {
+            String paperResponseId = RandomString.make();
 
             CCDCase ccdCase = CCDCase.builder()
-                .staffUploadedDocuments(ImmutableList.of(element))
+                .staffUploadedDocuments(List.of(buildCCDCollection(changedType, paperResponseId)))
                 .build();
 
-            when(caseDetailsConverter.extractCCDCase(any())).thenReturn(ccdCase);
+            CCDCase ccdCaseBefore = CCDCase.builder()
+                .staffUploadedDocuments(List.of(buildCCDCollection(paperResponseType, paperResponseId)))
+                .build();
+
+            when(caseDetailsConverter.extractCCDCase(caseDetails)).thenReturn(ccdCase);
+            when(caseDetailsConverter.extractCCDCase(caseDetailsBefore)).thenReturn(ccdCaseBefore);
 
             CallbackRequest request = CallbackRequest.builder()
                 .caseDetails(caseDetails)
@@ -271,45 +299,86 @@ class ManageDocumentsCallbackHandlerTest {
                 .build();
 
             AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
+                = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
 
-            Assertions.assertNotNull(response.getErrors());
-            assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.PAPER_RESPONSE_ERROR_MESSAGE));
+            Assertions.assertNull(response.getErrors());
         }
+    }
 
-        @Test
-        void shouldReturnErrorIfPaperResponseStatesPaidSelected() {
-            CCDClaimDocument claimDocument =
-                CCDClaimDocument.builder()
-                    .documentType(CCDClaimDocumentType.PAPER_RESPONSE_STATES_PAID)
-                    .build();
+    static class NonPaperResponseType implements ArgumentsProvider {
 
-            CCDCollectionElement<CCDClaimDocument> element = CCDCollectionElement.<CCDClaimDocument>builder()
-                .value(claimDocument)
-                .build();
+        @Override
+        public Stream<Arguments> provideArguments(ExtensionContext context) {
+            Stream.Builder<Arguments> argumentBuilder = Stream.builder();
 
-            CCDCase ccdCase = CCDCase.builder()
-                .staffUploadedDocuments(ImmutableList.of(element))
-                .build();
+            for (CCDClaimDocumentType type : NON_PAPER_RESPONSE_TYPES) {
+                argumentBuilder.add(Arguments.of(type));
+            }
 
-            when(caseDetailsConverter.extractCCDCase(any())).thenReturn(ccdCase);
-
-            CallbackRequest request = CallbackRequest.builder()
-                .caseDetails(caseDetails)
-                .caseDetailsBefore(caseDetailsBefore)
-                .build();
-
-            CallbackParams callbackParams = CallbackParams.builder()
-                .type(CallbackType.MID)
-                .request(request)
-                .build();
-
-            AboutToStartOrSubmitCallbackResponse response
-                = (AboutToStartOrSubmitCallbackResponse)handler.handle(callbackParams);
-
-            Assertions.assertNotNull(response.getErrors());
-            assertThat(response.getErrors(), contains(ManageDocumentsCallbackHandler.PAPER_RESPONSE_ERROR_MESSAGE));
+            return argumentBuilder.build();
         }
+    }
 
+    static class PaperResponseTypeProvider implements ArgumentsProvider {
+
+        @Override
+        public Stream<Arguments> provideArguments(ExtensionContext context) {
+            Stream.Builder<Arguments> argumentBuilder = Stream.builder();
+            for (CCDClaimDocumentType documentType : PAPER_RESPONSE_TYPES) {
+                argumentBuilder.add(Arguments.of(documentType));
+            }
+            return argumentBuilder.build();
+        }
+    }
+
+    static class PaperResponseToPaperResponseType implements ArgumentsProvider {
+
+        @Override
+        public Stream<Arguments> provideArguments(ExtensionContext context) {
+            Stream.Builder<Arguments> argumentBuilder = Stream.builder();
+            for (CCDClaimDocumentType beforeType : PAPER_RESPONSE_TYPES) {
+
+                for (CCDClaimDocumentType changedType : PAPER_RESPONSE_TYPES) {
+                    if (beforeType ==  changedType) {
+                        continue;
+                    }
+
+                    argumentBuilder.add(Arguments.of(beforeType, changedType));
+                }
+            }
+            return argumentBuilder.build();
+        }
+    }
+
+    static class PaperResponseToNonPaperResponseType implements ArgumentsProvider {
+
+        @Override
+        public Stream<Arguments> provideArguments(ExtensionContext context) {
+            Stream.Builder<Arguments> argumentBuilder = Stream.builder();
+            for (CCDClaimDocumentType beforeType : PAPER_RESPONSE_TYPES) {
+
+                for (CCDClaimDocumentType changedType : NON_PAPER_RESPONSE_TYPES) {
+                    if (beforeType ==  changedType) {
+                        continue;
+                    }
+
+                    argumentBuilder.add(Arguments.of(beforeType, changedType));
+                }
+            }
+            return argumentBuilder.build();
+        }
+    }
+
+    private CCDCollectionElement<CCDClaimDocument> buildCCDCollection(CCDClaimDocumentType paperResponseType,
+                                                                      String id) {
+        CCDClaimDocument claimDocument =
+            CCDClaimDocument.builder()
+                .documentType(paperResponseType)
+                .build();
+
+        return CCDCollectionElement.<CCDClaimDocument>builder()
+            .value(claimDocument)
+            .id(id == null ? RandomString.make() : id)
+            .build();
     }
 }
